Tue Jun  6 18:54:43 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Updated socketclient / socketserver to pass the collapse key
	  around with the mset items.

Tue Jun  6 18:34:36 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Update BackendManager to accept arbitrary numbers of database
	  parameters, and to cope properly if the datadir isn't specified
	  (ie, leave the filenames alone).

	* Turn off indexing code built into InMemory databases: they now need
	  to have their indexing done for them externally.

	* Add debugging code to net_document.cc

	* Make omprogsrv use a backend manager to perform its indexing.

Tue Jun  6 16:59:57 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Separate BackendManager from rest of code in apitest, and put it
	  into testsuite, ready for use in other tests.

Tue Jun  6 15:38:30 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Implemented a version of SleepyDatabase::do_get_all_keys().
	  Untested as yet.

Tue Jun  6 15:01:09 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added exception handling to scripting language bindings.

Tue Jun  6 13:11:15 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Stop using vectors of OmKeys, now use map<om_keyno, OmKey>
	  everywhere.

Tue Jun  6 13:08:58 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Beginnings of Perl5 bindings.

Tue Jun  6 12:57:54 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Implemented reading and writing of keys in sleepycat.  All tests
	  now pass on sleepycat: added this into the default testsuite run.

Tue Jun  6 11:59:39 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Added a database to store keys in to sleepycat, and pass those keys
	  into document creation methods.  Now just need to write code to
	  read and write the keys.

Mon Jun  5 19:12:13 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>
